Enable CORS requests. Return expected API response for GET courses.

--- a/gs-api.yaml
+++ b/gs-api.yaml
@@ -6,6 +6,9 @@ info:
     email: groundschoolnz@gmail.com
 host: gs-api-prod.appspot.com
 basePath: /api
+x-google-endpoints:
+- name: gs-api-prod.appspot.com
+  allowCors: True
 paths:
   /exams:
     get:
