--- a/app.yaml
+++ b/app.yaml
@@ -3,3 +3,12 @@ env: flex
 endpoints_api_service:
   name: gs-api-prod.appspot.com
   rollout_strategy: managed
+# The settings below are to reduce costs during testing and are not appropriate
+# for production use. For more information, see:
+# https://cloud.google.com/appengine/docs/flexible/dotnet/configuring-your-app-with-app-yaml
+manual_scaling:
+  instances: 1
+resources:
+  cpu: 1
+  memory_gb: 0.5
+  disk_size_gb: 10
